--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
+  <div id="toc" class="toc"></div>
 
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
@@ -24,3 +25,10 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>  
+<script src="https://cdn.bootcss.com/toc/0.3.2/toc.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#toc').toc({ selectors: "h1:not(.post-title),h2:not(.footer-heading),h3,h4"});
+});
+</script>
