--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -213,7 +213,59 @@ pre {
   }
 }
 
+.toc {
+  display: none;
+}
 
+@media screen and (min-width: 992px) {
+  .toc {
+    display: block;
+    position: fixed;
+    top: 70px;
+    right: 0; 
+    width: 280px;
+    max-width: 16%; 
+    font-size: 12px;
+    line-height: 16px;
+   
+    .toc-h2 {
+      text-indent: 1em;
+    }
+    
+    .toc-h3 {
+      text-indent: 2em;
+    }
+    
+    .toc-h4 {
+      text-indent: 3em;
+    }
+    
+    ul {
+      margin: 0; 
+      border-left: 1px solid #c1bfbf;
+      list-style-type: none;  
+    }
+  
+    li {
+      padding: 6px 12px;
+      // width: 260px;
+    }
+  
+    a {
+      text-decoration: none;
+      color: #4d4c4c;
+    }
+  
+    li.toc-active a {
+      color: #1976d2;
+      font-weight: 500;
+    }
+  
+    li a:hover {
+      color: #1e88e5;
+    }
+  }
+}
 
 /**
  * Clearfix
