--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -77,7 +77,7 @@
 
 .code-wrapper {
   .title {
-    background: #878590;
+    background: rgb(30, 136, 229);
     line-height: 35px;
     padding: 0 20px;
     color: #fff;
