--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -97,6 +97,21 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
+  -webkit-font-smoothing: antialiased;
+  clear: both;
+  color: rgba(0, 0, 0, 0.870588);
+  display: block;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+h1 {
+  font-size: 22px;
+  font-weight: 500;
+  height: 30px;
+  margin-bottom: 24px;
+  margin-top: 32px;
 }
 
 
