--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,10 +6,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+  // border-top: 5px solid $grey-color-dark;
+  // border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
-  background-color: #fff;
+  background-color: rgb(25, 118, 210);
+  box-shadow: rgba(0, 0, 0, 0.298039) 0px 2px 5px 0px;
 }
 
 .site-title {
@@ -23,7 +24,8 @@
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    // color: $grey-color-dark;
+    color: #fff;
   }
 }
 
@@ -40,7 +42,8 @@
   }
 
   .page-link {
-    color: $text-color;
+    // color: $text-color;
+    color: #fff;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -57,6 +60,10 @@
     border: 1px solid $grey-color-light;
     border-radius: 5px;
     text-align: right;
+
+    .page-link {
+      color: $text-color;
+    }
 
     label[for="nav-trigger"] {
       display: block;
@@ -252,14 +259,14 @@
 
   h2 {
     @include relative-font-size(2);
-
+    
     padding: 8px 0;
     margin: 15px 0 30px;
     border-bottom: 1px solid rgba(0, 0, 0, .1);
     // color: #111;
     // margin-top: 24px;
     // margin-bottom: 16px;
-    font-weight: 500;
+    font-weight: normal;
     line-height: 1.25;
 
     padding-bottom: 12px;
