--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
  * Syntax highlighting styles
  */
 .highlight {
-  background: #fff;
+  background: #fafafa;
     border: 1px solid #e8e7e7;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
