--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
   width: 100%;
   // border-top: 5px solid $grey-color-dark;
   // border-bottom: 1px solid $grey-color-light;
