添加站点统计工具

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,15 @@
   });
   </script>
   <script src="/assets/tabs.js"></script>
+  <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?2c5e840c645fc31f07311c30f3538eb6";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+  </script>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
